Step 12 - Company task that fails with awaitAll()